--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
 baseURL = 'https://unse-project.github.io/'
 languageCode = 'en-us'
-title = 'UNse -singing synthesizer creater'
+title = 'UNse - singing synthesizer creator'
